--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,15 @@
         "twig/twig": ">=1.8,<2.0-dev",
         "symfony/twig-bridge": "~2.3",
         "j4mie/paris": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "FranMoreno": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
